--- a/DevFreela.API/appsettings.json
+++ b/DevFreela.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DevFreelaCs": "Server=localhost\\SQLEXPRESS01;Database=DevFreelaDb;Trusted_Connection=True;TrustServerCertificate=True;"
+  },
+  "Jwt": {
+    "Key": "Minha senha secreta para proteger meus tokens",
+    "Issuer": "DevFreela.API",
+    "Audience": "DevFreelaApp"
   }
 }
